# dandelionSDK

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.b  LICENSE  README.md  cxx_eh_frame.ld
.github/: release_latest.yml
.github/workflows/: build_check.yml  file_checks.yml  release_experimental.yml  release_latest.yml  release_latest_testing.yml  release_test.yml  testing.yml
LICENSES/: MIT.txt
dev/: Dockerfile.dlibc  README  dev_container.sh  dev_prepare_libctest.py  dev_prepare_libctest.sh  dev_rebuild.sh  dev_run_libctest_ctest.sh  dev_update_libctest_patch.sh  dev_update_newlib_patch.sh  run_libctest_ctest.cmake
examples/: CMakeLists.txt  simple.c
file_system/: CMakeLists.txt  devices.h  file_system.c  file_system.h  fs_implementation.c  paths.c  paths.h
file_system/include/: fs_interface.h
functionInterface/: CMakeLists.txt  README.md
functionInterface/include/: dandelionIO.h  dandelionIOInternal.h
functionInterface/src/: dandelionIO.c
include/dandelion/: crt.h  io_buffer.h  runtime.h
include/dandelion/system/: system.h
libc_extension/: CMakeLists.txt  aio.c  arpa_inet.c  crypt.c  dirent.c  dlfcn.c  if.c  ifaddrs.c  inet.c  mman.c  mntent.c  monetary.c  mqueue.c  net_if.c  netdb.c  nl_types.c  poll.c  pthread.c  resolv.c  sched.c  semaphore.c  setjmp.c  socket.c  sys_ipc.c  sys_mman.c  sys_msg.c  sys_sem.c  sys_shm.c  sys_syscall.c  sys_termios.c  sys_utsname.c  syslog.c  uio.c  utmpx.c
libc_extension/include/: aio.h  crypt.h  dlfcn.h  ifaddrs.h  mntent.h  monetary.h  mqueue.h  netdb.h  nl_types.h  resolv.h  semaphore.h  syslog.h  utmpx.h
libc_extension/include/arpa/: inet.h
libc_extension/include/net/: if.h
libc_extension/include/netinet/: in.h  tcp.h
libc_extension/include/sys/: cpuset.h  ipc.h  mman.h  msg.h  poll.h  sem.h  shm.h  shm_template.h  socket.h  statvfs.h  syscall.h  termios.h  uio.h  un.h  utsname.h  utsname_template.h
libc_test/: .dockerignore  .gitignore  Dockerfile.dlibc  Dockerfile.ubuntu24  Makefile  README  check_csv.py  config.mak.dlibc  dev_container.sh  dev_rebuild.sh  dev_shell.sh  dev_update_newlib_patch.sh  gen_csv.py  gen_csv.sh  libc-test.patch  results_ubuntu24.csv  run_test_dlibc.py  run_test_dlibc.sh  upstream-ref.txt
libc_test/report/ci/: function_failure_summary_aarch64_debug_Release.csv  function_failure_summary_aarch64_debug_Release.md
libc_test/scripts/: analyze_results.ipynb
libc_test/scripts/stub_inventory/: libc_extension_manual_stubbed_functions.csv  newlib_shim_manual_stubbed_functions.csv  stubbed_functions.csv
libc_test/src/api/: pthread.c  stddef.c
libc_test/src/common/: options.h  runtest.c  setrlim.c
libc_test/src/functional/: env.c  tls_align.mk
libc_test/src/regression/: raise-race.c
newlib_shim/: Makefile.inc  compiler_wrapper_template.sh  dirent.c  dirent.h  math_stubs.c  mman.h  newlib-cygwin-3.5.3 copy.patch  newlib-cygwin-3.5.3.patch  patch_script  pthread.c  sched.h  search.c  shim.c  signal.c  signal_dandelion.c  socket.c  statvfs.h  stdio.c  time.c  uio.c  unistd.c  utime.c  wait.c
newlib_shim/sys/: fcntl.h
runtime/: CMakeLists.txt  runtime.c  runtime.h
scripts/: install_buildtools.sh
sdk_install/: CMakeLists.txt  CMakeTemplate.txt  clang-template.cmake  clangxx-template.cmake  linker.ld  script-template.sh  toolchain-template.cmake
src/: dandelion.c
syscall/linux/: CMakeLists.txt
system/: CMakeLists.txt  freestanding.c  system.c  system.h
system/cheri/: CMakeLists.txt  cheri.c
system/debug/: CMakeLists.txt  debug.c
system/platform/cheri/: CMakeLists.txt  cheri.c
system/platform/debug/: CMakeLists.txt  debug.c
system/platform/kvm/: CMakeLists.txt  kvm.c
system/platform/mmu_freebsd/: CMakeLists.txt  mmu_freebsd.c
system/platform/mmu_linux/: CMakeLists.txt  mmu_linux.c
system/platform/test/: CMakeLists.txt  test.c
system/platform/wasm/: CMakeLists.txt  wasm.c
system/syscall/freebsd/: CMakeLists.txt  syscall.h
system/syscall/freebsd/arch/aarch64/: syscall_arch.h
system/syscall/freebsd/arch/x86_64/: syscall_arch.h
system/syscall/linux/: CMakeLists.txt  syscall.h
system/syscall/linux/arch/aarch64/: syscall_arch.h
system/syscall/linux/arch/x86_64/: syscall_arch.h
test_interfaces/: build.rs
test_interfaces/src/: fs_interface.rs  lib.rs  runtime.rs
test_programs/: CMakeLists.txt  urandom.c
test_programs/libc/: CMakeLists.txt  test.c
test_programs/libcpp/: CMakeLists.txt  input_1.txt  input_2.txt  test.cpp
tests/: Cargo.toml
tests/src/: fs_interface.rs  lib.rs  runtime.rs
