if(NOT DANDELION_SYSTEM)
set(DANDELION_SYSTEM "debug")
endif()

add_library(${SYSTEM_LIB} STATIC system.c)
target_include_directories(${SYSTEM_LIB} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_compile_options(${SYSTEM_LIB} PRIVATE -nostdlib)

if(DANDELION_SYSTEM MATCHES "debug")
    add_subdirectory(platform/debug)
    add_subdirectory(syscall/linux)
elseif(DANDELION_SYSTEM MATCHES "cheri")
    add_subdirectory(platform/cheri)
elseif(DANDELION_SYSTEM MATCHES "mmu_freebsd")
    add_subdirectory(platform/mmu_freebsd)
    add_subdirectory(syscall/freebsd)
elseif(DANDELION_SYSTEM MATCHES "mmu_linux")
    add_subdirectory(platform/mmu_linux)
    add_subdirectory(syscall/linux)
else()
    message(FATAL_ERROR "Invalid system: ${DANDELION_SYSTEM}")
endif()
message(STATUS "Using system: ${DANDELION_SYSTEM}")

