if(NOT DANDELION_PLATFORM)
set(DANDELION_PLATFORM "debug")
endif()

add_library(${SYSTEM_LIB} STATIC system.c)
target_include_directories(${SYSTEM_LIB} PRIVATE ${DANDELION_ROOT}/include)
target_compile_options(${SYSTEM_LIB} PRIVATE -fno-stack-protector)
target_link_options(${SYSTEM_LIB} PRIVATE -nostdlib)

if(DANDELION_PLATFORM MATCHES "debug")
    add_subdirectory(platform/debug)
    add_subdirectory(syscall/linux)
elseif(DANDELION_PLATFORM MATCHES "cheri")
    add_subdirectory(platform/cheri)
elseif(DANDELION_PLATFORM MATCHES "mmu_freebsd")
    add_subdirectory(platform/mmu_freebsd)
    add_subdirectory(syscall/freebsd)
elseif(DANDELION_PLATFORM MATCHES "mmu_linux")
    add_subdirectory(platform/mmu_linux)
    add_subdirectory(syscall/linux)
else()
    message(FATAL_ERROR "Invalid platform: ${DANDELION_PLATFORM}")
endif()
message(STATUS "Using platform: ${DANDELION_PLATFORM}")

